# workflow-orchestration-service-whiskey11

./: .ai-repository-summary.md  .gitignore  AGENTS.md  README.md  docker-compose.yml  opencode.json  run_opencode_prompt.ps1  run_opencode_prompt.sh  workflow-orchestration-service-whiskey11.code-workspace
.copilot/: mcp-config.json
.devcontainer/: devcontainer.json
.factory/: mcp.json
.opencode/: package.json
.qwen/: settings.json
client/: .dockerignore  Dockerfile  pyproject.toml  requirements.txt
client/src/: __init__.py  config.py  main.py  sentinel.py
client/src/models/: __init__.py  work_item.py
client/src/queue/: __init__.py
client/tests/: __init__.py  test_config.py  test_main.py  test_models.py
debrief-and-document/: debrief-report.md
docs/: cli-installer-script.md  debrief-epic-1.2-trace.md  debrief-epic-1.2.md  local-orchestration-quickstart.md  new_features.md  pwsh-scripts.md  server-image-structure.md
local_ai_instruction_modules/: ai-development-instructions.md
plan_docs/: architecture.md  tech-stack.md  workflow-plan.md
scripts/: assemble-local-prompt.ps1  assemble-orchestrator-prompt.ps1  assemble-orchestrator-prompt.sh  collect-trace-artifacts.ps1  devcontainer-opencode.ps1  devcontainer-opencode.sh  install-inference-tools.ps1  on-failure-handler.ps1  post-failure-comment.ps1  prompt-direct.ps1  prompt-direct.sh  prompt.ps1  resolve-image-tags.ps1  setup-local-env.ps1  start-opencode-server.ps1  trigger-orchestrator-test.ps1  validate.ps1
test/: TestResolveImageTags.ps1  TestSetupLocalEnv.ps1  test-opencode-run.sh  (+1 more)
(+54 files in other folders)
